# quantum-simulator

./: .editorconfig  .gitattributes  .gitignore  CMakeLists.txt  Makefile  README.md  imgui.ini  quantum-mechanics-simulation-design-document.md
.github/workflows/: ci.yml
config/: default_config.json
dotvscode_examples/: instructions.txt
dotvscode_examples/mac/: c_cpp_properties.json  launch.json  settings.json  tasks.json
memory-bank/: 00-index.md  01-product-vision.md  02-techContext.md  03-systemPatterns.md  04-database.md  05-uidesign.md  06-developmentPlan.md  07-kanban.md  08-changelog.md  09-environment.md  10-ai-interaction-guidelines.md  11-code-snippets.md  12-decisions.md  13-quick-reference.md  event-system.md  interface-design.md
src/: CMakeLists.txt  main.cpp
src/config/: CMakeLists.txt  ConfigLoader.cpp  ConfigLoader.h
src/core/: CMakeLists.txt  PhysicsConfig.h  Wavefunction.h
src/solver/: CMakeLists.txt  ISimulationEngine.h  SimulationEngine.cpp  SimulationEngine.h
src/ui/: CMakeLists.txt  IUIManager.h  UIManager.cpp  UIManager.h
src/visualization/: CMakeLists.txt  IVisualizationEngine.h  VisualizationEngine.cpp  VisualizationEngine.h
tests/: CMakeLists.txt
tests/integration/: TunnelingTest.cpp
tests/unit/: PotentialTests.cpp  SimulationEngineTests.cpp  WavefunctionTests.cpp
